--- a/report_latex/wine_quality_report.tex
+++ b/report_latex/wine_quality_report.tex
@@ -26,9 +26,9 @@
 \captionsetup{font=small,labelfont=bf}
 
 \title{ワイン品質予測における機械学習手法の比較研究\\
-{\large 異分野研究探査　人工知能研究室}}
-\author{学籍番号:2515111031
-氏名:小西隆一}
+{\large ???}}
+\author{学籍番号:\#\#\#\#\#\#\\
+氏名:\#\#\#\#}
 \date{2025年9月21日}
 
 \begin{document}
